new: navigate button implemented